@@ -422,7 +422,7 @@ __END__
 
 =head1 SYNOPSIS
 
-    my $email = Courriel->parse( text => \$text );
+    my $email = Courriel->parse( text => $raw_email );
 
     print $email->subject();
 
@@ -431,7 +431,7 @@ __END__
     print $email->datetime()->year();
 
     if ( my $part = $email->plain_body_part() ) {
-        print ${ $part->content() };
+        print $part->content();
     }
 
 =head1 DESCRIPTION
@@ -450,12 +450,13 @@ classes.
 
 This class provides the following methods:
 
-=head2 Courriel->parse( text => \$text )
+=head2 Courriel->parse( text => $raw_email )
 
 This parses the given text and returns a new Courriel object. The text can be
-provided as a string or a reference to a string. The scalar underlying the
-reference I<will> be modified, so don't pass in something you don't want
-modified.
+provided as a string or a reference to a string.
+
+If you pass a reference, then the scalar underlying the reference I<will> be
+modified, so don't pass in something you don't want modified.
 
 =head2 $email->parts()
 
